syntax = "proto3";

import "CameraModel.proto";
import "Session.proto";

package proto;

message QueryMessage {
  bytes image = 1; 
  CameraModel cameraModel = 2;
  Session session = 3;
}
